Fixed updating comment interactions
